[package]
name = "radiance_cascades"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
wgpu = "23.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
image = {  version = "0.25.4", features = [ "png", "jpeg" ] }
cgmath = "0.18.0"
anyhow = "1.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
futures-intrusive = "0.5.0"
